--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,2 @@
-<!DOCTYPE htnml>
-<html>
-    <head>
-        <title> </title>
-        <h1>About Page</h1>
-    </head>
-
-    <body>
-        <p> About Page Text</p>
-
-    </body>
-</html>
+{%extends "layout.html"%}
+{}
